# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/appexecfwk/standard/appexecfwk.gni")

config("bundlemgr_test_config") {
  include_dirs = [
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_base/include",
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "${appexecfwk_path}/services/bundlemgr/include/sandbox_app",
    "mock/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content/",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
  ]

  if (bundle_framework_free_install) {
    include_dirs += [
      "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include/aging",
      "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include/free_install",
    ]
  }

  configs = [
    "${services_path}/bundlemgr:bundlemgr_common_config",
    "${common_path}:appexecfwk_common_config",
  ]
}

group("unittest") {
  testonly = true

  deps = [
    "unittest/bms_bundle_accesstokenid_test:unittest",
    "unittest/bms_bundle_data_storage_test:unittest",
    "unittest/bms_bundle_installer_test:unittest",
    "unittest/bms_bundle_kit_service_test:unittest",
    "unittest/bms_bundle_native_test:unittest",
    "unittest/bms_bundle_parser_test:unittest",
    "unittest/bms_bundle_permission_grant_test:unittest",
    "unittest/bms_bundle_uninstaller_test:unittest",
    "unittest/bms_bundle_updater_test:unittest",
    "unittest/bms_data_mgr_test:unittest",
    "unittest/bms_install_daemon_test:unittest",
    "unittest/bms_service_bundle_scan_test:unittest",
    "unittest/bms_service_startup_test:unittest",
  ]
}
