# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "appexecfwk_standard/application_test"

#APP_INNERKITS_PATH = "//foundation/appexecfwk/standard/interfaces/innerkits"
ABILITY_INNERKITS_PATH = "//foundation/aafwk/standard/interfaces/innerkits"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//foundation/appexecfwk/standard/kits/appkit/native/ability_runtime/context",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/appmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk_L2/content",
    "//EOSP/communication/libsoftbus/../../../foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk_L2/content",
    "//foundation/appexecfwk/standard/kits/appkit/native/test/mock/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher/include/dispatcher",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher/include/task",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher/include/threading",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/include/task",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  defines = [
    "APP_LOG_TAG = \"ApplicationUnitTest\"",
    "LOG_DOMAIN = 0xD001151",
  ]
}

config("module_context_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/appmgr",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk_L2/content",
    "//EOSP/communication/libsoftbus/../../../foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk_L2/content",
    "//foundation/appexecfwk/standard/kits/appkit/native/test/mock/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher/include/dispatcher",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher/include/task",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher/include/threading",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/include/task",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  defines = [
    "APP_LOG_TAG = \"ApplicationUnitTest\"",
    "LOG_DOMAIN = 0xD001151",
  ]
}

ohos_unittest("context_deal_interface_test") {
  module_out_path = module_output_path
  sources = [
    "mock/include/mock_ability_manager_client_interface1.cpp",
    "mock/include/mock_resourceManager_interface1.cpp",
    "unittest/context_deal_interface1_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:dummy_classes",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("application_test") {
  module_out_path = module_output_path
  sources = [
    "../app/src/ohos_application.cpp",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/src/app_loader.cpp",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/src/application_context.cpp",
    "unittest/application_test.cpp",
    "unittest/ability_stage_test.cpp",
    "unittest/context_impl_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/appexecfwk/standard/kits:app_context",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher:appkit_dispatcher_td",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",

    #"//foundation/appexecfwk/standard/kits:appkit_native",
  ]

  external_deps = [
    "aafwk_standard:runtime",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("context_container_test") {
  module_out_path = module_output_path
  sources = [
    "../app/src/ohos_application.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/src/app_loader.cpp",
    "unittest/context_container_test.cpp",
  ]

  configs = [ ":module_context_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher:appkit_dispatcher_td",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:runtime",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("application_context_for_task_dispacher_test") {
  module_out_path = module_output_path
  sources = [ "unittest/application_context_for_task_dispacher_test.cpp" ]

  configs = [ ":module_context_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher:appkit_dispatcher_td",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("context_deal_for_task_dispacher_test") {
  module_out_path = module_output_path
  sources = [ "unittest/context_deal_for_task_dispacher_test.cpp" ]

  configs = [ ":module_context_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher:appkit_dispatcher_td",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("context_deal_test") {
  module_out_path = module_output_path
  sources = [
    "../app/src/ohos_application.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/src/app_loader.cpp",
    "mock/include/mock_ability_manager_client.cpp",
    "unittest/context_deal_test.cpp",
  ]

  configs = [ ":module_context_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher:appkit_dispatcher_td",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:runtime",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("application_impl_test") {
  module_out_path = module_output_path
  sources = [
    "../app/src/application_impl.cpp",
    "../app/src/ohos_application.cpp",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/src/app_loader.cpp",
    "//foundation/appexecfwk/standard/kits/appkit/native/app/src/application_context.cpp",
    "unittest/application_impl_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${ABILITY_INNERKITS_PATH}/want:want",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/interfaces/innerkits/task_dispatcher:appkit_dispatcher_td",
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:runtime",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

config("ability_start_setting_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//foundation/appexecfwk/standard/kits/appkit/native/app/include",
    "//foundation/appexecfwk/common/log/include/",
    "//utils/native/base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
  ]
}

ohos_unittest("ability_start_setting_test") {
  module_out_path = module_output_path

  configs = [
    ":module_context_config",
    ":ability_start_setting_config",
  ]

  sources = [
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_start_setting.cpp",
    "unittest/ability_start_setting_test.cpp",
  ]

  deps = [
    "//foundation/appexecfwk/standard/kits:appkit_native",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
    "//utils/native/base:utilsbase",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

###############################################################################

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":ability_start_setting_test",
    ":application_impl_test",
    ":application_test",
    ":context_container_test",
    ":context_deal_test",
  ]
}
###############################################################################
