# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/appexecfwk/standard/appexecfwk.gni")

module_output_path = "bundle_tool/tools"

config("tools_bm_config_mock") {
  include_dirs = [
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_base/include",
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "${aafwk_path}/interfaces/innerkits/uri/include",
    "${aafwk_path}/interfaces/innerkits/want/include",
    "${aafwk_path}/interfaces/innerkits/want/include/ohos/aafwk/content",
    "${appexecfwk_path}/interfaces/innerkits/libeventhandler/include",
    "${appexecfwk_path}/services/bundlemgr/include",
    "${appexecfwk_path}/tools/test/mock",
    "//base/security/permission/interfaces/innerkits/permission_standard/permissionsdk/main/cpp/include",
    "//base/security/appverify/interfaces/innerkits/appverify/include",
    "//third_party/googletest/googlemock/include",
    "//third_party/json/single_include",
  ]
}

tools_bm_mock_sources = [
  "${appexecfwk_path}/tools/test/mock/mock_bundle_installer_host.cpp",
  "${appexecfwk_path}/tools/test/mock/mock_bundle_mgr_host.cpp",
]

ohos_unittest("bm_command_dump_test") {
  module_out_path = module_output_path

  include_dirs = []

  sources = [
    "${appexecfwk_path}/kits/appkit/napi/bundlemgr/bundle_death_recipient.cpp",
    "${appexecfwk_path}/tools/bm/src/bundle_command.cpp",
    "${appexecfwk_path}/tools/bm/src/shell_command.cpp",
    "${appexecfwk_path}/tools/bm/src/status_receiver_impl.cpp",
    "bm_command_dump_test.cpp",
  ]
  sources += tools_bm_mock_sources

  configs = [
    "${appexecfwk_path}/tools/bm:tools_bm_config",
    ":tools_bm_config_mock",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${aafwk_path}/services/abilitymgr:abilityms",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${appexecfwk_path}/services/bundlemgr:libbms",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "appverify:libhapverify",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "distributeddatamgr:distributeddata_inner",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "resmgr_standard:global_resmgr",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]
}

ohos_unittest("bm_command_install_test") {
  module_out_path = module_output_path

  include_dirs = []

  sources = [
    "${appexecfwk_path}/kits/appkit/napi/bundlemgr/bundle_death_recipient.cpp",
    "${appexecfwk_path}/tools/bm/src/bundle_command.cpp",
    "${appexecfwk_path}/tools/bm/src/shell_command.cpp",
    "${appexecfwk_path}/tools/bm/src/status_receiver_impl.cpp",
    "bm_command_install_test.cpp",
  ]
  sources += tools_bm_mock_sources

  configs = [
    "${appexecfwk_path}/tools/bm:tools_bm_config",
    ":tools_bm_config_mock",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${aafwk_path}/services/abilitymgr:abilityms",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${appexecfwk_path}/services/bundlemgr:libbms",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "appverify:libhapverify",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "distributeddatamgr:distributeddata_inner",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "resmgr_standard:global_resmgr",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]
}

ohos_unittest("bm_command_test") {
  module_out_path = module_output_path

  include_dirs = []

  sources = [
    "${appexecfwk_path}/kits/appkit/napi/bundlemgr/bundle_death_recipient.cpp",
    "${appexecfwk_path}/tools/bm/src/bundle_command.cpp",
    "${appexecfwk_path}/tools/bm/src/shell_command.cpp",
    "${appexecfwk_path}/tools/bm/src/status_receiver_impl.cpp",
    "bm_command_test.cpp",
  ]
  sources += tools_bm_mock_sources

  configs = [
    "${appexecfwk_path}/tools/bm:tools_bm_config",
    ":tools_bm_config_mock",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${aafwk_path}/services/abilitymgr:abilityms",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${appexecfwk_path}/services/bundlemgr:libbms",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "appverify:libhapverify",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "distributeddatamgr:distributeddata_inner",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "resmgr_standard:global_resmgr",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]
}

ohos_unittest("bm_command_uninstall_test") {
  module_out_path = module_output_path

  include_dirs = []

  sources = [
    "${appexecfwk_path}/kits/appkit/napi/bundlemgr/bundle_death_recipient.cpp",
    "${appexecfwk_path}/tools/bm/src/bundle_command.cpp",
    "${appexecfwk_path}/tools/bm/src/shell_command.cpp",
    "${appexecfwk_path}/tools/bm/src/status_receiver_impl.cpp",
    "bm_command_uninstall_test.cpp",
  ]
  sources += tools_bm_mock_sources

  configs = [
    "${appexecfwk_path}/tools/bm:tools_bm_config",
    ":tools_bm_config_mock",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${aafwk_path}/services/abilitymgr:abilityms",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${appexecfwk_path}/services/bundlemgr:libbms",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "appverify:libhapverify",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "distributeddatamgr:distributeddata_inner",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "resmgr_standard:global_resmgr",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]
}

group("unittest") {
  testonly = true

  deps = [
    ":bm_command_dump_test",
    ":bm_command_install_test",
    ":bm_command_test",
    ":bm_command_uninstall_test",
  ]
}
